<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvVidioShowMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.github.clans.fab.FloatingActionMenu
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        android:id="@+id/material_design_android_floating_action_menu_tab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        fab:menu_animationDelayPerItem="55"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="#009688"
        fab:menu_colorPressed="#00D3C0"
        fab:menu_colorRipple="#009688"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_labels_colorNormal="#4CAF50"
        fab:menu_labels_colorPressed="#60E264"
        fab:menu_labels_colorRipple="#66efecec"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_position="right"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="#f2f1f1"
        fab:menu_labels_textSize="15sp"
        fab:menu_fab_size="mini">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/material_design_floating_action_menu_item1_tab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            fab:fab_label="@string/fab_lable1"
            fab:fab_size="mini"
            fab:fab_colorNormal="#009688"
            fab:fab_colorPressed="#00D3C0"
            fab:fab_colorRipple="#009688"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/material_design_floating_action_menu_item2_tab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_rate"
            fab:fab_label="@string/fab_lable2"
            fab:fab_size="mini"
            fab:fab_colorNormal="#009688"
            fab:fab_colorPressed="#00D3C0"
            fab:fab_colorRipple="#009688"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/material_design_floating_action_menu_item3_tab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_quit_app"
            fab:fab_label="@string/fab_lable3"
            fab:fab_size="mini"
            fab:fab_colorNormal="#009688"
            fab:fab_colorPressed="#00D3C0"
            fab:fab_colorRipple="#009688"/>

    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>