<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fadeScrollbars="false"
    android:scrollbarThumbVertical="@color/scroll_bar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="لا تتردد في زيارة قناتنا على اليوتيوب و الإشتراك معنا لتصلك أحدث فيديواتنا."
                android:textColor="#333333"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/idChannelYoutube"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/visit_ytchannel_bt"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:background="@drawable/youtube_channel"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                     />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="تطبيقات أخرى على بلاي ستور"
                android:paddingBottom="10dp"
                android:textColor="#009688"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:srcCompat="@drawable/elkolfielko_icon" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/elkolfielkot_txt"
                        android:textColor="#363636"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btElkolFiElkol"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bt_cancel"
                        android:text="تحميل مجاني"
                        android:textColor="#4CAF50"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingRight="15dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:srcCompat="@drawable/recharger_facilemnt_icon_min" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/recharger_facilement_txt"
                        android:textColor="#363636"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btRechargerFacilement"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bt_cancel"
                        android:text="تحميل مجاني"
                        android:textColor="#4CAF50"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>