<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_background"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.1"
            android:background="@drawable/back_btn"
            android:backgroundTint="#009688"
            android:onClick="backButton" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0.9"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:text="تطبيقات أخرى على بلاي ستور"
            android:textColor="#009688"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:scrollbarThumbVertical="@color/scroll_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="80dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingLeft="10dp">

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            app:srcCompat="@drawable/elkolfielko_icon" />

                        <TextView
                            android:id="@+id/textView21"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/elkolfielkot_txt"
                            android:textColor="#363636"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btElkolFiElkol1"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bt_cancel"
                            android:onClick="elkolfielkolButton"
                            android:text="تحميل مجاني"
                            android:textColor="#4CAF50"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingRight="15dp">

                        <ImageView
                            android:id="@+id/imageView21"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            app:srcCompat="@drawable/recharger_facilemnt_icon_min" />

                        <TextView
                            android:id="@+id/textView31"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/recharger_facilement_txt"
                            android:textColor="#363636"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btRechargerFacilement1"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bt_cancel"
                            android:onClick="rechargerFacilementAppButton"
                            android:text="تحميل مجاني"
                            android:textColor="#4CAF50"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingLeft="10dp">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="260dp"
                            android:layout_height="130dp"
                            app:srcCompat="@drawable/icone_tetromino" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:gravity="center_horizontal"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/tetromino_txt"
                            android:textColor="#363636"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btTetromino"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bt_cancel"
                            android:onClick="terominoGameButton"
                            android:text="تحميل مجاني"
                            android:textColor="#4CAF50"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>